# pry-jupiter-phising-detect-lib-shared-kernel

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-pr-check.yml
shared_kernel/: __init__.py  logging.py  session.py  settings.py
